# quoridouble

./: .gitignore  CMakeLists.txt  pubspec.yaml  readme.md  run.sh
.github/workflows/: flutter_build.yml
agent/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
app/: LICENSE  pubspec.yaml
app/android/app/: build.gradle  proguard-rules.pro
app/assets/translations/: en-US.json  ja-JP.json  ko-KR.json  ru-RU.json  zh-CN.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/screens/: ai_screen.dart  home_screen.dart  pvp_screen.dart
app/lib/screens/ai_screen/: index.dart
app/lib/utils/: socket_service.dart
app/lib/utils/AI/: alpha_beta.dart  index.dart  mcts.dart
app/lib/widgets/: show_info.dart  show_language_dialog.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/windows/runner/: Runner.rc
be/: build.gradle.kts
core/rust/: Cargo.toml
core/rust/src/: main.rs
include/quoridouble/core/: action.hpp  state.hpp
include/quoridouble/elements/: board.hpp  pawn.hpp  wall.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: ai_screen.dart  ai_select_screen.dart  game_screen.dart  home_screen.dart  intro_screen.dart  pvp_screen.dart  room_screen.dart
lib/utils/: ai.dart  game.dart  socket_service.dart
lib/utils/AI/: alpha_beta.dart
lib/widgets/: show_info.dart
lib/widgets/modals/: show_game_setup_modal.dart  show_info.dart
lib/widgets/pvp_screen/: match_dialog.dart  opponent_out_dialog.dart
(+44 files in other folders)
